--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -1,5 +1,9 @@
 body{
   font-family: 'Markazi Text', serif;
+  background-image: url(http://magic-goal.ru/wp-content/uploads/2017/04/office-cat.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 nav{
   border: 1px solid #edeff2;
@@ -9,6 +13,8 @@ nav{
 }
 header{
   font-size: 220%;
+  text-align: center;
+  color:#fcffdd;
 }
 main{
   width: 70%;
@@ -17,6 +23,7 @@ main{
   padding: 0 30px 30px;
   border-radius: 5px;
   border: 2px solid #edeff2;
+  background-color: white;
 }
 div{
   width: 100%;
@@ -29,14 +36,8 @@ div{
   border: 1px solid #edeff2;
 }
 h1{
-  border: 1px solid white;
-  margin:10%;
-  padding:10%;
-  background-image: url(http://protechniq.com/max/wp-content/uploads/2011/09/simons-cat-cat-and-mouse.jpg);
-  background-size: contain;
-  background-repeat: no-repeat;
   color: black;
-  text-align:right;
+  text-align:center;
 
 }
 h2{
