first blog;addrequirements

--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -56,6 +56,9 @@ header{
 hr{
   font-size: 80%;
 }
+p, ol{
+  color:#2e3b82 !important;
+}
 div{
   width: 100%;
   box-sizing: border-box;
@@ -120,4 +123,7 @@ footer{
   font-size: 65%;
   text-align: right;
   color: #c2c6ce;
+}
+p:hover::first-letter {
+  font-size: 120%;
 }
