--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -45,7 +45,7 @@ main{
   border-radius: 5px;
   box-sizing: border-box;
   position: relative;
-  margin-top: 10%;
+  margin-top: 6%;
   margin-left: 9%;
   margin-right: 61%;
   padding: 0;
@@ -54,9 +54,6 @@ main{
   background-color: #3c8b80;
   height:30px;
   border-radius: 3px;
-}
-.travelnav{
-  height:250px;
 }
 .bigplane{
   box-sizing: border-box;
@@ -122,7 +119,7 @@ main{
   padding-top: 2.5%;
   padding-left: 2%;
   padding-bottom: 0.5%;
-  font-size: 80%;
+  font-size: 70%;
   color: #6c7a8e;
 }
 .dates{
@@ -149,7 +146,7 @@ input[type=date]{
   background-color: #203a53;
   border: 1px solid #203a53;
   width: 97%;
-  font-size: 80%;
+  font-size: 70%;
 }
 .passengers{
   margin: 0px;
@@ -157,18 +154,59 @@ input[type=date]{
 }
 .passengers > li{
   display: inline-block;
-  border: 1px solid white;
   height: 15px;
-  width: 17%;
   border-radius: 3px;
   margin-top: 6%;
-  margin-left: 1.5%;
-  margin-right: 3%;
-  padding-top: 1%;
-  padding-bottom: 2%;
-  padding-left: 2%;
   font-size: 80%;
 }
-.radioform{
-  width: 40%;
+.box1{
+  margin-left: 3%;
+  margin-right: 3%;
+  width: 18%;
+  padding-top: 2.5%;
+  padding-left: 2%;
+  padding-bottom: 0.5%;
+}
+.box2{
+  border: 1px solid white;
+  margin-left: 2%;
+  margin-right: 3%;
+  padding-top: 2.5%;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
+  padding-bottom: 5px;
+  width: 15%;
+}
+.numbers{
+  background-color: #203a53;
+  border: 1px solid #203a53;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 80%;
+  padding: 0px;
+}
+.box3{
+  width: 42%;
+  margin-left: 1%;
+  margin-right: 3%;
+  padding-left: 2%;
+}
+.radio-inline > input{
+  font-size: 6px;
+}
+.submit{
+  width: 92%;
+  height: 3%;
+  margin-left: 3%;
+  margin-top: 6%;
+  margin-bottom: 6%;
+  background-color:#255ca1;
+  border: 0px solid white;
+  border-radius: 3px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 2%;
+  color: white;
+  font-size: 80%;
+
 }
