--- a/04week/nasa/css/style.css
+++ b/04week/nasa/css/style.css
@@ -20,6 +20,7 @@ h1{
   color: white;
   font-size: 100px;
   margin: 20px;
+  font-weight: bolder;
 }
 .bottombar{
   background-color: lightgrey;
@@ -32,12 +33,18 @@ h1{
 .media{
   list-style-type: none;
   padding: 0px;
+  line-height: 25px;
 }
 #location{
   font-style: normal;
+  line-height: 25px;
 }
 .button{
   background-color: #484d54;
   color: white;
+  font-size: 15px;
   padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-weight: bold;
 }
