--- a/04week/tomorrows-technology/css/style.css
+++ b/04week/tomorrows-technology/css/style.css
@@ -73,7 +73,9 @@ button{
     justify-content: space-around;
     position: absolute;
     margin-top: 450px;
-    width: 300px;
+    height: auto;
+    width: 90%;
+    margin-left: 5%;
   }
   aside{
     display: none;
